# c_reflect

./: CMakeLists.txt  README.md  tmp.cpp
src/: CMakeLists.txt  cmdargs.cpp  cmdargs.hpp  main.cpp
src/cursor/: cursor.cpp  cursor.hpp
src/generate/: generate.cpp  generate.hpp  mustacheHeaderTemplate.cpp  mustacheSourceTemplate.cpp  templateManager.hpp
src/lib/: reference.cpp
src/parse/: parse.cpp  parse.hpp
src/parse.typeinfo/: types.cpp  types.hpp
test/: class.hpp
test/buildTest/: CMakeLists.txt  Monster.hpp  Monster_SE.cpp  Monster_SE.hpp  ba.bash  cmake_simple_de.bash  main.cpp  meta.hpp  reference-GIH-D-23458.hpp  reference.hpp
test/buildTest/build2/: CMakeCache.txt  Makefile  cmake_install.cmake
test/buildTest/homeBuild/: CMakeCache.txt  Makefile  cmake_install.cmake
test/mustache/: ba.bat  mustacheTest.cpp
test/tupelInvoke/: a  g.bash  invoke.cpp  tt  tt.cpp
